[project]
name = "pinwise" 
version = "0.1.0"
description = "Sync links between Pinboard and Readwise Reader."  # Optional
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["bookmarking", "syncing"]
authors = [
  {name = "Dan Turkel", email = "daturkel@gmail.com" } # Optional
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "requests>=2.31"
]

[project.optional-dependencies] # Optional
dev = ["mypy>=1.3", "pytest>=7.3"]

[project.urls] 
"Homepage" = "https://github.com/daturkel/pinwise"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {} # {"sample" = ["*.dat"]}